Projeto EAD pronto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">SendMail</string>
+    <string name="to">To:</string>
+    <string name="cc">CC:</string>
+    <string name="bcc">Bcc:</string>
+    <string name="subject">Subject:</string>
+    <string name="message">Message:</string>
+    <string name="cleanform">Clean Form</string>
+    <string name="sendform">Send Form</string>
 </resources>
